# NotifyPub

./: .devcontainer.json  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  app.py  pyproject.toml
.run/: runserver.run.xml
app/: api.py  app.py  login.py  model.py  website.py
app/templates/: base.html  dashboard.html  index.html  login.html  manage_notifications.html  manage_tokens.html  new_notification.html  share.xml
notifypub/: manage.py
notifypub/app/: context_processors.py  models.py  urls.py  views.py
notifypub/app/migrations/: 0001_initial.py
notifypub/app/templates/app/: base.html  dashboard.html  index.html  manage_notifications.html  manage_tokens.html
notifypub/notifypub/: asgi.py  settings.py  urls.py  wsgi.py
tests/: test_api.py
