[tool.poetry]
name = "notifypub"
version = "0.1.0"
description = "Notification Publisher"
authors = ["Isaac Beverly"]
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Flask = "^2.2.2"
waitress = "^2.1.2"
python-dotenv = "^1.0.0"
Flask-WTF = "^1.0.1"
Flask-Session = "^0.4.0"
Flask-Login = "^0.6.2"
SQLAlchemy = "^1.4.41"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
